# cs148opengl-public

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: cube.mtl  sphere.mtl
assets/outlander/: Outlander_Readme.txt
assets/outlander/Model/: Outlander_Model.fbx  Outlander_Model.max
assets/outlander/PSD/: Outlander_Backpack_Normal.psd
assets/outlander/TGA/: Outlander_Backpack_Diffuse.tga  Outlander_Backpack_Glow.tga  Outlander_Backpack_Normal.tga  Outlander_Backpack_Spec.tga  Outlander_Body_Glow.tga  Outlander_HeadArmsPacks_Glow.tga
assets/outlander/TGA/.mayaSwatches/: Outlander_Backpack_Diffuse.tga_hcm.swatch  Outlander_HeadArmsPacks_Diffuse.tga_hcm.swatch
assignment1/: Assignment1.cpp  Assignment1.h
assignment2/: Assignment2.cpp  Assignment2.h
assignment3/: Assignment3.cpp  Assignment3.h
assignment4/: Assignment4.cpp  Assignment4.h
assignment5/: Assignment5.cpp  Assignment5.h
cmake/: FindFreeImage.cmake  FindSDL2.cmake
common/: MediaLayer.cpp
common/Rendering/Shaders/: CubeMapShader.cpp  CubeMapShader.h  EpicShader.cpp  EpicShader.h
common/Rendering/Textures/: CubeMapTexture.cpp  CubeMapTexture.h  Texture2D.cpp  Texture2D.h
common/Scene/: SceneObject.cpp
common/Scene/Light/: Light.h  LightProperties.h
doxygen/: dox
doxygen/html/: _application_8cpp.html  _application_8h.html  _application_8h_source.html  _assignment1_8cpp.html  _assignment1_8h.html  _assignment1_8h_source.html  _assignment2_8cpp.html  _assignment2_8h.html  _assignment2_8h_source.html  _assignment3_8cpp.html  _assignment3_8h.html  _assignment3_8h_source.html  _assignment4_8cpp.html  _assignment4_8h.html  _assignment4_8h_source.html  _assignment5_8cpp.html  _assignment5_8h.html  _assignment5_8h_source.html  _blinn_phong_shader_8cpp.html  _blinn_phong_shader_8h.html  _blinn_phong_shader_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _cube_map_shader_8cpp.html  _cube_map_shader_8h.html  _cube_map_shader_8h_source.html  _cube_map_texture_8cpp.html  _cube_map_texture_8h.html  _cube_map_texture_8h_source.html  _forward_renderer_8cpp.html  _forward_renderer_8h.html  _forward_renderer_8h_source.html  _light_8cpp.html  _light_8h.html  _light_8h_source.html  _light_properties_8h.html  _light_properties_8h_source.html  _media_layer_8cpp.html  _media_layer_8h.html  (+162 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+65 more)
doxygen/latex/: _application_8cpp.tex  _application_8h.tex  _assignment1_8cpp.tex  _assignment1_8h.tex  _assignment2_8cpp.tex  _assignment2_8h.tex  _assignment3_8cpp.tex  _assignment3_8h.tex  _assignment4_8cpp.tex  _assignment4_8h.tex  _assignment5_8cpp.tex  _assignment5_8h.tex  _blinn_phong_shader_8cpp.tex  _blinn_phong_shader_8h.tex  _camera_8cpp.tex  _camera_8h.tex  _cube_map_shader_8cpp.tex  _cube_map_shader_8h.tex  _cube_map_texture_8cpp.tex  _cube_map_texture_8h.tex  _forward_renderer_8cpp.tex  _forward_renderer_8h.tex  _light_8cpp.tex  _light_8h.tex  _light_properties_8h.tex  _media_layer_8cpp.tex  _media_layer_8h.tex  _mesh_loader_8cpp.tex  _mesh_loader_8h.tex  _perspective_camera_8cpp.tex  _perspective_camera_8h.tex  _primitive_creator_8cpp.tex  _primitive_creator_8h.tex  _renderer_8cpp.tex  _renderer_8h.tex  _rendering_object_8cpp.tex  _rendering_object_8h.tex  _scene_8cpp.tex  _scene_8h.tex  _scene_object_8cpp.tex  (+79 more)
scripts/: dirCopy.py
shaders/brdf/blinnphong/fragTexture/noSubroutine/: blinnphong.frag
shaders/hw2/: hw2.frag  hw2.vert
shaders/hw4/: epic.frag  epic.vert
